# document-templating-system

./: .gitignore  Cargo.toml  README.md
bruno/document-templating-system-web/: .gitignore  README.md  bruno.json
scripts/: document-templating-system.sh  install_wkhtmltopdf.py  package_release.py  start-document-templating-system.cmd  test_all.py
src/: app_paths.rs  builtin_classic_template.rs  builtin_country_templates.rs  builtin_templates.rs  cli.rs  cli_args_tests.rs  cli_help.rs  config.rs  country_resume_defaults.rs  country_resume_sections.rs  country_resume_spec.rs  document_model.rs  document_package.rs  integrations.rs  json_file.rs  main.rs  model.rs  pdf_command.rs  pdf_command_tests.rs  pdf_renderer.rs  remote_template_actions.rs  remote_template_keys.rs  remote_templates.rs  remote_templates_tests.rs  render.rs  s3_request.rs  s3_signing.rs  s3_target.rs  storage.rs  storage_memory.rs  storage_s3.rs  storage_s3_tests.rs  template_bundle.rs  template_bundle_discovery.rs  template_bundle_manifest.rs  template_bundle_manifest_discovery.rs  template_bundle_renderer.rs  template_bundle_renderer_discovery.rs  template_catalog.rs  template_manifest_validation.rs  (+14 more)
src/archive/: mod.rs  reader.rs  tests.rs  writer.rs
src/cli/: args.rs  (+3 more)
template-test/: document-templating-system.json  document.json
template-test-2/: document.json
templates/: classic-resume.css  classic-resume.html  resume-germany.css  resume-germany.html  resume-indonesia.css  resume-indonesia.html  resume-netherlands.css  resume-netherlands.html
web/: app.js  index.html  styles.css
(+59 files in other folders)
