[package]
name = "document-templating-system"
version = "0.1.0"
edition = "2021"
description = "A local-first document templating system with a browser-based editor and PDF export."

[dependencies]
anyhow = "1"
base64 = "0.22"
crc32fast = "1"
flate2 = "1"
handlebars = "6"
hmac = "0.12"
hex = "0.4"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
time = { version = "0.3", features = ["formatting", "macros"] }
ureq = "2"
url = "2"
